Bundle JavaScript in debug APK
- Add react-native bundle step before assembling debug APK
- Ensures JS bundle is included in standalone APK
- Fixes 'Unable to load script' error on devices

Co-authored-by: Ona <no-reply@ona.com>

--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -139,6 +139,19 @@ jobs:
       - name: Make Gradlew Executable
         run: chmod +x android/gradlew
 
+      - name: Bundle JavaScript for Debug
+        if: ${{ github.event.inputs.build_type == 'debug' }}
+        run: |
+          # Create assets directory
+          mkdir -p android/app/src/main/assets
+          # Bundle the JavaScript code
+          npx react-native bundle \
+            --platform android \
+            --dev false \
+            --entry-file index.js \
+            --bundle-output android/app/src/main/assets/index.android.bundle \
+            --assets-dest android/app/src/main/res
+
       - name: Build Debug APK
         if: ${{ github.event.inputs.build_type == 'debug' }}
         run: |
